--- a/data/cards/02204140.yaml
+++ b/data/cards/02204140.yaml
@@ -84,7 +84,7 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
-  - set_number: STP4-EN0??
+  - set_number: STP4-EN024
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -138,7 +138,7 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
-  - set_number: STP4-DE0??
+  - set_number: STP4-DE024
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -188,7 +188,7 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
-  - set_number: STP4-FR0??
+  - set_number: STP4-FR024
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -238,7 +238,7 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
-  - set_number: STP4-IT0??
+  - set_number: STP4-IT024
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -272,7 +272,7 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
-  - set_number: STP4-PT0??
+  - set_number: STP4-PT024
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
