--- a/data/cards/13048472.yaml
+++ b/data/cards/13048472.yaml
@@ -53,6 +53,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-EN012
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   de:
   - set_number: SHVI-DE065
     set_name: Shining Victories
@@ -70,6 +74,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-DE012
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   fr:
   - set_number: SHVI-FR065
     set_name: Shining Victories
@@ -87,6 +95,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-FR012
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   it:
   - set_number: SHVI-IT065
     set_name: Shining Victories
@@ -104,6 +116,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-IT012
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   pt:
   - set_number: SHVI-PT065
     set_name: Shining Victories
@@ -117,6 +133,10 @@ sets:
     set_name: 'Battles of Legend: Relentless Revenge'
     rarities:
     - Ultra Rare
+  - set_number: STP4-PT012
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   ja:
   - set_number: SHVI-JP065
     set_name: Shining Victories
