--- a/data/cards/15800838.yaml
+++ b/data/cards/15800838.yaml
@@ -66,7 +66,7 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP4-EN0??
+  - set_number: STP4-EN005
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
@@ -99,7 +99,7 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP4-DE0??
+  - set_number: STP4-DE005
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
@@ -132,7 +132,7 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP4-FR0??
+  - set_number: STP4-FR005
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
@@ -165,7 +165,7 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
-  - set_number: STP4-IT0??
+  - set_number: STP4-IT005
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
@@ -178,7 +178,7 @@ sets:
     set_name: 'Structure Deck: Lair of Darkness'
     rarities:
     - Common
-  - set_number: STP4-PT0??
+  - set_number: STP4-PT005
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
