--- a/data/cards/19801646.yaml
+++ b/data/cards/19801646.yaml
@@ -57,6 +57,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: STP4-EN022
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   de:
   - set_number: LEDU-DE015
     set_name: Legendary Duelists
@@ -72,6 +76,10 @@ sets:
     - Common
   - set_number: LED9-DE024
     set_name: 'Legendary Duelists: Duels From the Deep'
+    rarities:
+    - Common
+  - set_number: STP4-DE022
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   fr:
@@ -91,6 +99,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: STP4-FR022
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   it:
   - set_number: LEDU-IT015
     set_name: Legendary Duelists
@@ -108,6 +120,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Common
+  - set_number: STP4-IT022
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   pt:
   - set_number: LEDU-PT015
     set_name: Legendary Duelists
@@ -123,6 +139,10 @@ sets:
     - Common
   - set_number: LED9-PT024
     set_name: 'Legendary Duelists: Duels From the Deep'
+    rarities:
+    - Common
+  - set_number: STP4-PT022
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   ja:
