--- a/data/cards/30492798.yaml
+++ b/data/cards/30492798.yaml
@@ -60,6 +60,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP4-EN009
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   de:
   - set_number: ABPF-DE087
     set_name: Absolute Powerforce
@@ -77,6 +81,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP4-DE009
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   fr:
   - set_number: ABPF-FR087
     set_name: Absolute Powerforce
@@ -94,6 +102,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP4-FR009
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   it:
   - set_number: ABPF-IT087
     set_name: Absolute Powerforce
@@ -111,6 +123,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP4-IT009
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   pt:
   - set_number: THSF-PT040
     set_name: The Secret Forces
@@ -124,6 +140,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
+  - set_number: STP4-PT009
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   ja:
   - set_number: EXP3-JP038
     set_name: Extra Pack Volume 3
