--- a/data/cards/37721209.yaml
+++ b/data/cards/37721209.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Rare
+  - set_number: STP4-EN018
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: IOC-083
     set_name: Invasion of Chaos
     rarities:
@@ -100,6 +104,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Rare
+  - set_number: STP4-DE018
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   fr:
   - set_number: DR2-FR084
     set_name: Dark Revelation Volume 2
@@ -125,6 +133,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Rare
+  - set_number: STP4-FR018
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   it:
   - set_number: HL1-ITN004
     set_name: Hobby League 1 participation cards B
@@ -154,6 +166,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Rare
+  - set_number: STP4-IT018
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   pt:
   - set_number: SD4-PT010
     set_name: 'Structure Deck: Fury from the Deep'
@@ -167,6 +183,10 @@ sets:
     set_name: 'Legendary Duelists: Duels From the Deep'
     rarities:
     - Rare
+  - set_number: STP4-PT018
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   ja:
   - set_number: 307-028
     set_name: Invader of Darkness (set)
