--- a/data/cards/39507162.yaml
+++ b/data/cards/39507162.yaml
@@ -73,6 +73,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Ultra Rare
+  - set_number: STP4-EN017
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: DT04-EN003
     set_name: Duel Terminal 4
     rarities:
@@ -126,6 +130,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Ultra Rare
+  - set_number: STP4-DE017
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   fr:
   - set_number: CT1-FR002
     set_name: Collectible Tins 2004
@@ -163,6 +171,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Ultra Rare
+  - set_number: STP4-FR017
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   it:
   - set_number: CT1-IT002
     set_name: Collectible Tins 2004
@@ -200,6 +212,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Ultra Rare
+  - set_number: STP4-IT017
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   pt:
   - set_number: YSKR-PT018
     set_name: 'Starter Deck: Kaiba Reloaded'
@@ -217,6 +233,10 @@ sets:
     set_name: 'Speed Duel: Attack from the Deep'
     rarities:
     - Ultra Rare
+  - set_number: STP4-PT017
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   ja:
   - set_number: VJC-005
     set_name: V Jump July 2002 promotional card
