--- a/data/cards/45141844.yaml
+++ b/data/cards/45141844.yaml
@@ -77,7 +77,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: STP4-EN0??
+  - set_number: STP4-EN002
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
@@ -127,7 +127,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: STP4-DE0??
+  - set_number: STP4-DE002
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
@@ -169,7 +169,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: STP4-FR0??
+  - set_number: STP4-FR002
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
@@ -211,7 +211,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: STP4-IT0??
+  - set_number: STP4-IT002
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
@@ -232,7 +232,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Match of the Millennium'
     rarities:
     - Common
-  - set_number: STP4-PT0??
+  - set_number: STP4-PT002
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Ultra Rare
