--- a/data/cards/49064413.yaml
+++ b/data/cards/49064413.yaml
@@ -68,6 +68,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-EN010
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   - set_number: LON-001
     set_name: Labyrinth of Nightmare
     rarities:
@@ -105,6 +109,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-DE010
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   fr:
   - set_number: LDC-F001
     set_name: Labyrinth of Nightmare
@@ -126,6 +134,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-FR010
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   it:
   - set_number: LDI-I001
     set_name: Labyrinth of Nightmare
@@ -147,6 +159,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-IT010
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   pt:
   - set_number: DL2-PT001
     set_name: Duelist League Series 2 participation cards
@@ -156,6 +172,10 @@ sets:
     set_name: 'Duelist Pack: Battle City'
     rarities:
     - Rare
+  - set_number: STP4-PT010
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   ja:
   - set_number: SM-00
     set_name: Spell of Mask
