--- a/data/cards/57046845.yaml
+++ b/data/cards/57046845.yaml
@@ -64,6 +64,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
+  - set_number: STP4-EN019
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   de:
   - set_number: FET-DE022
     set_name: Flaming Eternity
@@ -86,6 +90,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
+  - set_number: STP4-DE019
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   fr:
   - set_number: FET-FR022
     set_name: Flaming Eternity
@@ -108,6 +116,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
+  - set_number: STP4-FR019
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   it:
   - set_number: FET-IT022
     set_name: Flaming Eternity
@@ -130,6 +142,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
+  - set_number: STP4-IT019
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   pt:
   - set_number: FET-PT022
     set_name: Flaming Eternity
@@ -144,6 +160,10 @@ sets:
     set_name: 'Speed Duel: Scars of Battle'
     rarities:
     - Ultra Rare
+  - set_number: STP4-PT019
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   ja:
   - set_number: FET-JP022
     set_name: Flaming Eternity
