--- a/data/cards/71044499.yaml
+++ b/data/cards/71044499.yaml
@@ -99,7 +99,7 @@ sets:
     rarities:
     - Common
     - Secret Rare
-  - set_number: STP4-EN0??
+  - set_number: STP4-EN023
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -177,7 +177,7 @@ sets:
     rarities:
     - Common
     - Secret Rare
-  - set_number: STP4-DE0??
+  - set_number: STP4-DE023
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -239,7 +239,7 @@ sets:
     rarities:
     - Common
     - Secret Rare
-  - set_number: STP4-FR0??
+  - set_number: STP4-FR023
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -301,7 +301,7 @@ sets:
     rarities:
     - Common
     - Secret Rare
-  - set_number: STP4-IT0??
+  - set_number: STP4-IT023
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -326,7 +326,7 @@ sets:
     set_name: Astral Pack Six
     rarities:
     - Common
-  - set_number: STP4-PT0??
+  - set_number: STP4-PT023
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
