--- a/data/cards/83133491.yaml
+++ b/data/cards/83133491.yaml
@@ -67,6 +67,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-EN027
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: IOC-053
     set_name: Invasion of Chaos
     rarities:
@@ -102,6 +106,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-DE027
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   fr:
   - set_number: DR2-FR053
     set_name: Dark Revelation Volume 2
@@ -131,6 +139,10 @@ sets:
     - Common
   - set_number: SBCB-FR035
     set_name: 'Speed Duel: Battle City Box'
+    rarities:
+    - Common
+  - set_number: STP4-FR027
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   it:
@@ -164,6 +176,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-IT027
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   pt:
   - set_number: BP02-PT178
     set_name: 'Battle Pack 2: War of the Giants'
@@ -181,6 +197,10 @@ sets:
     - Shatterfoil Rare
   - set_number: YS18-PT039
     set_name: 'Starter Deck: Codebreaker'
+    rarities:
+    - Common
+  - set_number: STP4-PT027
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   ja:
