--- a/data/cards/89208725.yaml
+++ b/data/cards/89208725.yaml
@@ -58,6 +58,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP4-EN029
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: SDCB-EN040
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
@@ -84,6 +88,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP4-DE029
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: SDCB-DE040
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
@@ -110,6 +118,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP4-FR029
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: SDCB-FR040
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
@@ -136,6 +148,10 @@ sets:
     rarities:
     - Common
     - Secret Rare
+  - set_number: STP4-IT029
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: SDCB-IT040
     set_name: 'Structure Deck: Legend of the Crystal Beasts'
     rarities:
@@ -155,6 +171,10 @@ sets:
     - Super Rare
   - set_number: SDCH-PT034
     set_name: 'Structure Deck: Spirit Charmers'
+    rarities:
+    - Common
+  - set_number: STP4-PT029
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   - set_number: SDCB-PT040
