--- a/data/cards/04740489.yaml
+++ b/data/cards/04740489.yaml
@@ -45,6 +45,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-EN013
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   de:
   - set_number: SDMY-DE024
     set_name: 'Structure Deck: Yugi Muto'
@@ -54,6 +58,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-DE013
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   fr:
   - set_number: SDMY-FR024
     set_name: 'Structure Deck: Yugi Muto'
@@ -63,6 +71,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-FR013
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   it:
   - set_number: SDMY-IT024
     set_name: 'Structure Deck: Yugi Muto'
@@ -72,11 +84,19 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-IT013
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   pt:
   - set_number: SDMY-PT024
     set_name: 'Structure Deck: Yugi Muto'
     rarities:
     - Common
+  - set_number: STP4-PT013
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   ja:
   - set_number: SDMY-JP021
     set_name: 'Structure Deck: Yugi Muto'
