--- a/data/cards/23265313.yaml
+++ b/data/cards/23265313.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP4-EN025
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: DCR-053
     set_name: Dark Crisis
     rarities:
@@ -90,6 +94,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP4-DE025
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   fr:
   - set_number: DR1-FR215
     set_name: Dark Revelation Volume 1
@@ -113,6 +121,10 @@ sets:
     - Common
   - set_number: SS03-FRA20
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
+    rarities:
+    - Common
+  - set_number: STP4-FR025
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   it:
@@ -140,6 +152,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
     rarities:
     - Common
+  - set_number: STP4-IT025
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   pt:
   - set_number: DR1-PT215
     set_name: Dark Revelation Volume 1
@@ -155,6 +171,10 @@ sets:
     - Common
   - set_number: SS03-PTA20
     set_name: 'Speed Duel Starter Decks: Ultimate Predators'
+    rarities:
+    - Common
+  - set_number: STP4-PT025
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   ja:
