--- a/data/cards/28933734.yaml
+++ b/data/cards/28933734.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: STP4-EN016
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: MRD-014
     set_name: Metal Raiders
     rarities:
@@ -129,6 +133,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: STP4-DE016
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   fr:
   - set_number: MRD-F014
     set_name: Metal Raiders
@@ -161,6 +169,10 @@ sets:
     - Ultra Rare
   - set_number: SS05-FRA19
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
+    rarities:
+    - Common
+  - set_number: STP4-FR016
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   it:
@@ -197,6 +209,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
     rarities:
     - Common
+  - set_number: STP4-IT016
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   pt:
   - set_number: PMT-P014
     set_name: Metal Raiders
@@ -212,6 +228,10 @@ sets:
     - Ultra Rare
   - set_number: SS05-PTA19
     set_name: 'Speed Duel Starter Decks: Twisted Nightmares'
+    rarities:
+    - Common
+  - set_number: STP4-PT016
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   ja:
