--- a/data/cards/37390589.yaml
+++ b/data/cards/37390589.yaml
@@ -103,6 +103,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP4-EN026
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   - set_number: DT05-EN048
     set_name: Duel Terminal 5a
     rarities:
@@ -151,6 +155,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP4-DE026
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   fr:
   - set_number: TDGS-FR098
     set_name: The Duelist Genesis
@@ -193,6 +201,10 @@ sets:
     - Common
   - set_number: SS02-FRB18
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP4-FR026
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   it:
@@ -239,6 +251,10 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Common
+  - set_number: STP4-IT026
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Common
   pt:
   - set_number: BP02-PT198
     set_name: 'Battle Pack 2: War of the Giants'
@@ -268,6 +284,10 @@ sets:
     - Common
   - set_number: SS02-PTB18
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
+    rarities:
+    - Common
+  - set_number: STP4-PT026
+    set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
   ja:
