--- a/data/cards/39778366.yaml
+++ b/data/cards/39778366.yaml
@@ -49,6 +49,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-EN015
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   de:
   - set_number: SDKS-DE030
     set_name: 'Structure Deck: Seto Kaiba'
@@ -62,6 +66,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-DE015
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   fr:
   - set_number: SDKS-FR030
     set_name: 'Structure Deck: Seto Kaiba'
@@ -75,6 +83,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-FR015
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   it:
   - set_number: SDKS-IT030
     set_name: 'Structure Deck: Seto Kaiba'
@@ -88,6 +100,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-IT015
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   pt:
   - set_number: SDKS-PT030
     set_name: 'Structure Deck: Seto Kaiba'
@@ -97,6 +113,10 @@ sets:
     set_name: Maximum Gold
     rarities:
     - Rare
+  - set_number: STP4-PT015
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   ja:
   - set_number: SDKS-JP032
     set_name: 'Structure Deck: Seto Kaiba'
