--- a/data/cards/81210420.yaml
+++ b/data/cards/81210420.yaml
@@ -77,6 +77,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-EN014
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   - set_number: PSV-033
     set_name: Pharaoh's Servant
     rarities:
@@ -126,6 +130,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-DE014
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   fr:
   - set_number: SDP-F033
     set_name: Pharaoh's Servant
@@ -163,6 +171,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-FR014
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   it:
   - set_number: SDF-I033
     set_name: Pharaoh's Servant
@@ -200,6 +212,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-IT014
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   pt:
   - set_number: YGLD-PTA38
     set_name: Yugi's Legendary Decks
@@ -213,6 +229,10 @@ sets:
     set_name: Legendary Decks II
     rarities:
     - Common
+  - set_number: STP4-PT014
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   ja:
   - set_number: CA-34
     set_name: Curse of Anubis (set)
