--- a/data/cards/82382815.yaml
+++ b/data/cards/82382815.yaml
@@ -50,7 +50,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Ultra Rare
-  - set_number: STP4-EN0??
+  - set_number: STP4-EN028
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -67,7 +67,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Ultra Rare
-  - set_number: STP4-DE0??
+  - set_number: STP4-DE028
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -84,7 +84,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Ultra Rare
-  - set_number: STP4-FR0??
+  - set_number: STP4-FR028
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -101,7 +101,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Ultra Rare
-  - set_number: STP4-IT0??
+  - set_number: STP4-IT028
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
@@ -114,7 +114,7 @@ sets:
     set_name: 'Speed Duel Starter Decks: Duelists of Tomorrow'
     rarities:
     - Ultra Rare
-  - set_number: STP4-PT0??
+  - set_number: STP4-PT028
     set_name: Speed Duel Tournament Pack 4
     rarities:
     - Common
