--- a/data/cards/90876561.yaml
+++ b/data/cards/90876561.yaml
@@ -89,6 +89,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: STP4-EN006
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   - set_number: DR04-EN065
     set_name: Dark Revelation Volume 4
     rarities:
@@ -132,6 +136,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: STP4-DE006
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   fr:
   - set_number: EEN-FR005
     set_name: Elemental Energy
@@ -175,6 +183,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: STP4-FR006
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   it:
   - set_number: EEN-IT005
     set_name: Elemental Energy
@@ -214,6 +226,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: STP4-IT006
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   pt:
   - set_number: YGLD-PTB06
     set_name: Yugi's Legendary Decks
@@ -240,6 +256,10 @@ sets:
     rarities:
     - Rare
     - Collector's Rare
+  - set_number: STP4-PT006
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   ja:
   - set_number: LE4-003
     set_name: 'Limited Edition 4: Yugi Pack'
