--- a/data/cards/95286165.yaml
+++ b/data/cards/95286165.yaml
@@ -71,6 +71,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-EN011
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   - set_number: LON-097
     set_name: Labyrinth of Nightmare
     rarities:
@@ -116,6 +120,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-DE011
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   fr:
   - set_number: LDC-F097
     set_name: Labyrinth of Nightmare
@@ -149,6 +157,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-FR011
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   it:
   - set_number: LDI-I097
     set_name: Labyrinth of Nightmare
@@ -182,6 +194,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-IT011
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   pt:
   - set_number: YGLD-PTB31
     set_name: Yugi's Legendary Decks
@@ -195,6 +211,10 @@ sets:
     set_name: Legendary Collection Kaiba Mega Pack
     rarities:
     - Secret Rare
+  - set_number: STP4-PT011
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Super Rare
   ja:
   - set_number: LN-46
     set_name: Labyrinth of Nightmare (Japanese)
