--- a/data/cards/97017120.yaml
+++ b/data/cards/97017120.yaml
@@ -96,6 +96,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP4-EN001
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   - set_number: MRL-079
     set_name: Magic Ruler
     rarities:
@@ -173,6 +177,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP4-DE001
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: MDM-F079
     set_name: Spell Ruler
@@ -222,6 +230,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP4-FR001
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   it:
   - set_number: SDM-I079
     set_name: Spell Ruler
@@ -271,6 +283,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP4-IT001
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: SYE-PT020
     set_name: 'Starter Deck: Yugi Evolution'
@@ -288,6 +304,10 @@ sets:
     set_name: 'Speed Duel GX: Duel Academy Box'
     rarities:
     - Common
+  - set_number: STP4-PT001
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: PS-28
     set_name: Pharaoh's Servant (Japanese)
