--- a/data/cards/99789342.yaml
+++ b/data/cards/99789342.yaml
@@ -61,6 +61,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-EN003
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   de:
   - set_number: PP01-DE008
     set_name: Premium Pack (TCG)
@@ -86,6 +90,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-DE003
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: PP01-FR008
     set_name: Premium Pack (TCG)
@@ -111,6 +119,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-FR003
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   it:
   - set_number: PP01-IT008
     set_name: Premium Pack (TCG)
@@ -136,6 +148,10 @@ sets:
     set_name: 'Speed Duel: Battle City Box'
     rarities:
     - Common
+  - set_number: STP4-IT003
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: YGLD-PTB18
     set_name: Yugi's Legendary Decks
@@ -149,6 +165,10 @@ sets:
     set_name: Legendary Dragon Decks
     rarities:
     - Common
+  - set_number: STP4-PT003
+    set_name: Speed Duel Tournament Pack 4
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: P4-04
     set_name: Premium Pack 4
