--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -29,6 +29,9 @@
   fake_password_range:
     - 100429000
     - 100419000
+- set_abbreviation: SLF1
+  fake_password_range:
+    - 100293000
 # Kittytale
 - yugipedia: 895427
   fake_password: 100200222
