--- a/data/cards/05439384.yaml
+++ b/data/cards/05439384.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Target 2 FIRE monsters (1 Tuner and 1 non-Tuner) with 200 DEF in your GY; banish both monsters, and if you do, Special Summon 1 FIRE Synchro Monster from your Extra Deck whose Level equals the total Levels of those monsters. You can only activate 1 "Birth of the Prominence Flame" per turn.
   de: |-
-    Wähle 2 FEUER Monster (1 Empfänger und 1 Nicht-Empfänger) mit 200 DEF in deinem Friedhof; verbanne beide Monster und falls du dies tust, beschwöre 1 FEUER Synchromonster, dessen Stufe der Summe der Stufen der Monster entspricht, als Spezialbeschwörung von deinem Extra Deck. Du kannst nur 1 „Entfesselung der Protuberanzflamme“ pro Spielzug aktivieren.
+    Wähle 2 FEUER Monster (1 Empfänger und 1 Nicht-Empfänger) mit 200 DEF in deinem Friedhof; verbanne beide Monster und falls du dies tust, beschwöre 1 FEUER Synchromonster, dessen Stufe der Summe der Stufen jener Monster entspricht, als Spezialbeschwörung von deinem Extra Deck. Du kannst nur 1 „Entfesselung der Protuberanzflamme“ pro Spielzug aktivieren.
   es: |-
     Selecciona 2 monstruos de FUEGO (1 Cantante y 1 que no sea Cantante) con 200 DEF en tu Cementerio; destierra ambos monstruos y, si lo haces, Invoca de Modo Especial 1 Monstruo de Sincronía de FUEGO desde tu Deck Extra cuyo Nivel sea igual a los Niveles totales de esos monstruos. Sólo puedes activar 1 "Nacimiento de la Llama de Prominencia" por turno.
   fr: |-
