--- a/data/cards/09322133.yaml
+++ b/data/cards/09322133.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Send 1 monster your opponent controls that was Special Summoned from the Extra Deck to the GY, then your opponent gains LP equal to the original ATK or DEF of that monster (whichever is higher). You can only activate 1 "Psychic Eraser Laser" per turn.
   de: |-
-    Lege 1 Monster, das dein Gegner kontrolliert und das als Spezialbeschwörung vom Extra Deck beschworen wurde, auf den Friedhof, dann erhält dein Gegner LP in Höhe der Grund-ATK oder -DEF des Monsters (was davon höher ist). Du kannst nur 1 „Psi-Löschlaser“ pro Spielzug aktivieren.
+    Lege 1 Monster, das dein Gegner kontrolliert und das als Spezialbeschwörung vom Extra Deck beschworen wurde, auf den Friedhof, dann erhält dein Gegner LP in Höhe der Grund-ATK oder -DEF jenes Monsters (was davon höher ist). Du kannst nur 1 „Psi-Löschlaser“ pro Spielzug aktivieren.
   es: |-
     Manda al Cementerio 1 monstruo que controle tu adversario que fue Invocado de Modo Especial desde el Deck Extra, y después tu adversario gana LP iguales al ATK o DEF original de ese monstruo (lo que sea mayor). Sólo puedes activar 1 "Láser Borrador Psíquico" por turno.
   fr: |-
