--- a/data/cards/10736540.yaml
+++ b/data/cards/10736540.yaml
@@ -8,7 +8,7 @@ name:
   it: La Signora del Lago
   pt: Dama do Lago
   ja: <ruby>湖<rt>みずうみ</rt></ruby>の<ruby>乙女<rt>おとめ</rt></ruby>ヴィヴィアン
-  ja_romaji: Mizu Umi no Otome Vivian
+  ja_romaji: Mizuumi no Otome Vivian
   ko: 호수의 소녀 비비안
   ko_rr:
   zh-TW:
