--- a/data/cards/11110218.yaml
+++ b/data/cards/11110218.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Target up to 5 cards in your opponent's GY and the same number of your opponent's banished cards; banish those targets from their GY, and if you do, return those banished targets to the GY. You can only activate 1 "Terrors of the Underroot" per turn.
   de: |-
-    Wähle bis zu 5 Karten im Friedhof deines Gegners und dieselbe Anzahl verbannte Karten deines Gegners; verbanne die gewählten Ziele von seinem Friedhof und falls du dies tust, lege die verbannten gewählten Ziele auf den Friedhof zurück. Du kannst nur 1 „Terror des Unterholzes“ pro Spielzug aktivieren.
+    Wähle bis zu 5 Karten im Friedhof deines Gegners und dieselbe Anzahl verbannte Karten deines Gegners; verbanne jene gewählten Ziele von seinem Friedhof und falls du dies tust, lege jene verbannten gewählten Ziele auf den Friedhof zurück. Du kannst nur 1 „Terror des Unterholzes“ pro Spielzug aktivieren.
   es: |-
     Selecciona hasta 5 cartas en el Cementerio de tu adversario y el mismo número de las cartas desterradas de tu adversario; destierra esos objetivos en su Cementerio y, si lo haces, devuelve esos objetivos desterrados al Cementerio. Sólo puedes activar 1 "Terrores del Bajorraíz" por turno.
   fr: |-
