--- a/data/cards/19362568.yaml
+++ b/data/cards/19362568.yaml
@@ -22,7 +22,7 @@ text:
   de: |-
     Aktiviere 1 der folgenden Effekte.
     ● Wähle 1 „Windhexe“-Monster in deinem Friedhof; beschwöre es als Spezialbeschwörung in die Verteidigungsposition.
-    ● Wenn dein Gegner eine Karte oder einen Effekt als Reaktion auf die Aktivierung eines Effekts deines „Windhexe“-Monsters aktiviert: Annulliere den Effekt des Gegners.
+    ● Wenn dein Gegner eine Karte oder einen Effekt als Reaktion auf die Aktivierung eines Effekts deines „Windhexe“-Monsters aktiviert: Annulliere jenen Effekt des Gegners.
     Du kannst nur 1 „Eisbrisen-Refrain“ pro Spielzug aktivieren.
   es: |-
     Activa 1 de los siguientes efectos.
