--- a/data/cards/20522190.yaml
+++ b/data/cards/20522190.yaml
@@ -8,7 +8,7 @@ name:
   it: Forza Riflessa Oscura
   pt: Força do Espelho Negro
   ja: <ruby>邪<rt>じゃ</rt></ruby><ruby>悪<rt>あく</rt></ruby>なるバリア －ダーク・フォース－
-  ja_romaji: Jākunaru Baria ‐ Dāku Fōsu -
+  ja_romaji: Jaakunaru Baria ‐ Dāku Fōsu -
   ko: 사악한 방어막 거울의 힘
   ko_rr:
   zh-TW:
