--- a/data/cards/37491810.yaml
+++ b/data/cards/37491810.yaml
@@ -19,7 +19,7 @@ text:
     If this card is Special Summoned from the Extra Deck: You can target 1 card your opponent controls; shuffle 2 face-up Pendulum Monsters from your Extra Deck into the Deck, and if you do, destroy that card. You can only use this effect of "Parametalfoes Azortless" once per turn. If this card in the Monster Zone is destroyed: You can place this card in your Pendulum Zone.
   de: |-
     1 „Metallfose“-Monster + 1 Fusionsmonster
-    Falls diese Karte als Spezialbeschwörung vom Extra Deck beschworen wird: Du kannst 1 Karte wählen, die dein Gegner kontrolliert; mische 2 offene Pendelmonster von deinem Extra Deck ins Deck und falls du dies tust, zerstöre die Karte. Du kannst diesen Effekt von „Parametallfose-Azortless“ nur einmal pro Spielzug verwenden. Falls diese Karte in der Monsterzone zerstört wird: Du kannst diese Karte in deine Pendelzone legen.
+    Falls diese Karte als Spezialbeschwörung vom Extra Deck beschworen wird: Du kannst 1 Karte wählen, die dein Gegner kontrolliert; mische 2 offene Pendelmonster von deinem Extra Deck ins Deck und falls du dies tust, zerstöre jene Karte. Du kannst diesen Effekt von „Parametallfose-Azortless“ nur einmal pro Spielzug verwenden. Falls diese Karte in der Monsterzone zerstört wird: Du kannst diese Karte in deine Pendelzone legen.
   es: |-
     1 monstruo "Metalmórfico/a" + 1 Monstruo de Fusión
     Si esta carta es Invocada de Modo Especial desde el Deck Extra: puedes seleccionar 1 carta que controle tu adversario; baraja al Deck 2 Monstruos de Péndulo boca arriba en tu Deck Extra y, si lo haces, destruye esa carta. Sólo puedes usar este efecto de "Parametalmórfico Azortless" una vez por turno. Si esta carta en la Zona de Monstruos es destruida: puedes poner esta carta en tu Zona de Péndulo.
