--- a/data/cards/51474037.yaml
+++ b/data/cards/51474037.yaml
@@ -21,8 +21,8 @@ text:
     You can only use this effect of "Yamorimori" once per turn.
   de: |-
     Du kannst diese Karte von deinem Friedhof verbannen und dann 1 Reptil-Monster, das du kontrollierst, und 1 offenes Monster, das dein Gegner kontrolliert, wählen, um 1 dieser Effekte zu aktivieren;
-    ● Ändere die Monster in die verdeckte Verteidigungsposition.
-    ● Zerstöre das Monster, das du kontrollierst, und falls du dies tust, ändere die ATK des anderen Monsters bis zum Ende dieses Spielzugs zu 0.
+    ● Ändere jene Monster in die verdeckte Verteidigungsposition.
+    ● Zerstöre jenes Monster, das du kontrollierst, und falls du dies tust, ändere die ATK des anderen Monsters bis zum Ende dieses Spielzugs zu 0.
     Du kannst diesen Effekt von „Yamorimori“ nur einmal pro Spielzug verwenden.
   es: |-
     Puedes desterrar esta carta en tu Cementerio, y después seleccionar 1 monstruo Reptil que controles y 1 monstruo boca arriba que controle tu adversario para activar 1 de estos efectos;
