--- a/data/cards/55766177.yaml
+++ b/data/cards/55766177.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Target 1 "Fabled" monster in your GY and 1 face-up card on the field; discard 1 card, and if you do, Special Summon that monster from your GY, and if you do that, destroy that card on the field. You can only activate 1 "Fabled Treason" per turn.
   de: |-
-    Wähle 1 „Sagenhaft“-Monster in deinem Friedhof und 1 offene Karte auf dem Spielfeld; wirf 1 Karte ab und falls du dies tust, beschwöre das Monster als Spezialbeschwörung von deinem Friedhof und falls du dies tust, zerstöre die Karte auf dem Spielfeld. Du kannst nur 1 „Sagenhafter Verrat“ pro Spielzug aktivieren.
+    Wähle 1 „Sagenhaft“-Monster in deinem Friedhof und 1 offene Karte auf dem Spielfeld; wirf 1 Karte ab und falls du dies tust, beschwöre jenes Monster als Spezialbeschwörung von deinem Friedhof und falls du dies tust, zerstöre jene Karte auf dem Spielfeld. Du kannst nur 1 „Sagenhafter Verrat“ pro Spielzug aktivieren.
   es: |-
     Selecciona 1 monstruo "Fabuloso/a" en tu Cementerio y 1 carta boca arriba en el Campo; descarta 1 carta y, si lo haces, Invoca ese monstruo de Modo Especial desde tu Cementerio y, si haces eso, destruye esa carta en el Campo. Sólo puedes activar 1 "Traición Fabulosa" por turno.
   fr: |-
