--- a/data/cards/56433456.yaml
+++ b/data/cards/56433456.yaml
@@ -8,7 +8,7 @@ name:
   it: Il Santuario nel Cielo
   pt: O Santuário no Céu
   ja: <ruby>天<rt>てん</rt></ruby><ruby>空<rt>くう</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>域<rt>いき</rt></ruby>
-  ja_romaji: Tenkū no Sei'iki
+  ja_romaji: Tenkū no Seiiki
   ko: 천공의 성역
   ko_rr: Cheon-gong-ui Seong-yeok
   zh-TW:
