--- a/data/cards/56588755.yaml
+++ b/data/cards/56588755.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Target 1 banished Fusion, Synchro, Xyz, or Link Monster, and 1 Effect Monster your opponent controls of the same type (Fusion, Synchro, Xyz, or Link); return that banished monster to the Extra Deck, and if you do, negate the effects of that monster your opponent controls. You can only activate 1 "Dogmatika Genesis" per turn.
   de: |-
-    Wähle 1 verbanntes Fusions-, Synchro-, Xyz- oder Linkmonster und 1 Effektmonster desselben Typs (Fusions-, Synchro-, Xyz- oder Link-), das dein Gegner kontrolliert; lege das verbannte Monster ins Extra Deck zurück und falls du dies tust, annulliere die Effekte des Monster, das dein Gegner kontrolliert. Du kannst nur 1 „Dogmatika-Ernennung“ pro Spielzug aktivieren.
+    Wähle 1 verbanntes Fusions-, Synchro-, Xyz- oder Linkmonster und 1 Effektmonster desselben Typs (Fusions-, Synchro-, Xyz- oder Link-), das dein Gegner kontrolliert; lege jenes verbannte Monster ins Extra Deck zurück und falls du dies tust, annulliere die Effekte jenes Monster, das dein Gegner kontrolliert. Du kannst nur 1 „Dogmatika-Ernennung“ pro Spielzug aktivieren.
   es: |-
     Selecciona 1 Monstruo de Fusión, Sincronía, Xyz o Enlace desterrado, y 1 Monstruo de Efecto que controle tu adversario del mismo tipo (de Fusión, Sincronía, Xyz o Enlace); devuelve al Deck Extra ese monstruo desterrado y, si lo haces, niega los efectos de ese monstruo que controla tu adversario. Sólo puedes activar 1 "Génesis Dogmátik" por turno.
   fr: |-
