--- a/data/cards/75402014.yaml
+++ b/data/cards/75402014.yaml
@@ -20,23 +20,23 @@ text:
     Once per turn, when a card or effect is activated that targets this card, or when this card is targeted for an attack (Quick Effect): You can equip 1 "ZW -" monster from your hand or Deck to this card as if it were equipped by that monster's effect. Once per turn: You can detach 1 material from this card, then target face-up cards your opponent controls up to the number of "ZW -" Monster Cards equipped to this card; negate their effects.
   de: |-
     3 Monster der Stufe 5
-    (Der Name dieser Karte wird immer als „Nummer C39: Utopiastrahl“ behandelt.)
-    Einmal pro Spielzug, wenn eine Karte oder ein Effekt aktiviert wird, die oder der diese Karte als Ziel wählt, oder wenn diese Karte als Ziel für einen Angriff gewählt wird (Schnelleffekt): Du kannst diese Karte mit 1 „ZW -“-Monster von deiner Hand oder deinem Deck ausrüsten, als ob sie durch den Effekt des Monsters ausgerüstet würde. Einmal pro Spielzug: Du kannst 1 Material von dieser Karte abhängen und dann offene Karten, die dein Gegner kontrolliert, bis zur Anzahl der „ZW -“-Monsterkarten wählen, mit denen diese Karte ausgerüstet ist; annulliere ihre Effekte.
+    (Diese Karte wird immer als „Nummer C39: Utopiastrahl“ behandelt.)
+    Einmal pro Spielzug, wenn eine Karte oder ein Effekt aktiviert wird, die oder der diese Karte als Ziel wählt, oder wenn diese Karte als Ziel für einen Angriff gewählt wird (Schnelleffekt): Du kannst diese Karte mit 1 „ZW -“-Monster von deiner Hand oder deinem Deck ausrüsten, als ob sie durch den Effekt jenes Monsters ausgerüstet würde. Einmal pro Spielzug: Du kannst 1 Material von dieser Karte abhängen und dann offene Karten, die dein Gegner kontrolliert, bis zur Anzahl der „ZW -“-Monsterkarten wählen, mit denen diese Karte ausgerüstet ist; annulliere ihre Effekte.
   es: |-
     3 monstruos de Nivel 5
-    (El nombre de esta carta se trata siempre como "Número C39: Rayo Utopía").
+    (Esta carta se trata siempre como "Número C39: Rayo Utopía").
     Una vez por turno, cuando es activada una carta o efecto que selecciona esta carta, o cuando esta carta es seleccionada para un ataque (Efecto Rápido): puedes equipar a esta carta 1 monstruo "ZW -" en tu mano o Deck como si fuera equipada por efecto de ese monstruo. Una vez por turno: puedes desacoplar 1 material de esta carta, y después seleccionar cartas boca arriba que controle tu adversario hasta el número de Cartas de Monstruo "ZW -" equipadas a esta carta; niega sus efectos.
   fr: |-
     3 monstres de Niveau 5
-    (Le nom de cette carte est toujours traité comme "Numéro C39 : Rayon Utopie".)
+    (Cette carte est toujours traitée comme "Numéro C39 : Rayon Utopie".)
     Une fois par tour, lorsqu'une carte ou un effet qui cible cette carte est activé, ou lorsque cette carte est ciblée par une attaque (Effet Rapide) : vous pouvez équiper 1 monstre "ZW -" depuis votre main ou Deck à cette carte comme si elle était équipée par l'effet du monstre. Une fois par tour : vous pouvez détacher 1 Matériel de cette carte, puis ciblez un nombre de cartes face recto contrôlées par votre adversaire inférieur ou égal au nombre de Cartes Monstre "ZW -" équipées à cette carte ; annulez leurs effets.
   it: |-
     3 mostri di Livello 5
-    (Il nome di questa carta viene sempre considerato come "Numero C39: Raggio Utopia".)
+    (Questa carta viene sempre considerata come "Numero C39: Raggio Utopia".)
     Una volta per turno, quando viene attivata una carta o un effetto che sceglie come bersaglio questa carta, o quando questa carta viene scelta come bersaglio per un attacco (Effetto Rapido): puoi equipaggiare 1 mostro "ZW -" dalla tua mano o Deck a questa carta come se fosse equipaggiato dall'effetto di quel mostro. Una volta per turno: puoi staccare 1 materiale da questa carta, poi scegliere come bersaglio carte scoperte controllate dal tuo avversario fino al numero di Carte Mostro "ZW -" equipaggiate a questa carta; annulla i loro effetti.
   pt: |-
     3 monstros de Nível 5
-    (O nome deste card deve ser sempre considerado como "Número C39: Raio Utopia".)
+    (Este card deve ser sempre considerado como "Número C39: Raio Utopia".)
     Uma vez por turno, quando um card ou efeito for ativado que escolha este card como alvo, ou quando este card for alvo de um ataque (Efeito Rápido): você pode equipar 1 monstro "ZW -" da sua mão ou do Deck a este card como se ele tivesse sido equipado pelo efeito desse monstro. Uma vez por turno: você pode desassociar 1 matéria deste card e, depois, escolha cards com a face para cima que seu oponente controla até o número de Cards de Monstro "ZW -" equipados a este card; negue seus efeitos.
   ja: |-
     レベル５モンスター×３
