--- a/data/cards/81380218.yaml
+++ b/data/cards/81380218.yaml
@@ -8,7 +8,7 @@ name:
   it: Coro del Santuario
   pt:
   ja: <ruby>聖<rt>せい</rt></ruby><ruby>域<rt>いき</rt></ruby>の<ruby>歌<rt>うた</rt></ruby><ruby>声<rt>ごえ</rt></ruby>
-  ja_romaji: Sei'iki no Utagoe
+  ja_romaji: Seiiki no Utagoe
   ko: 성역의 노랫소리
   ko_rr:
   zh-TW:
