--- a/data/cards/82913020.yaml
+++ b/data/cards/82913020.yaml
@@ -19,7 +19,7 @@ text:
     ● If this card battles a LIGHT or DARK monster, before damage calculation: You can banish that monster.
   de: |-
     Falls du ein „Sternzeichen“-Monster kontrollierst, außer „Sternzeichen-Kundler Hermestab“: Du kannst diese Karte als Spezialbeschwörung von deiner Hand beschwören. Während deiner Main Phase: Du kannst deiner Hand 1 „Sternzeichen“-Zauber/Falle von deinem Deck hinzufügen. Du kannst jeden der vorstehenden Effekte von „Sternzeichen-Kundler Hermestab“ nur einmal pro Spielzug verwenden. Ein „Sternzeichen“-Xyz-Monster, das diese Karte als Material hat, erhält diesen Effekt.
-    ● Falls diese Karte gegen ein LICHT oder FINSTERNIS Monster kämpft, vor der Schadensberechnung: Du kannst das Monster verbannen.
+    ● Falls diese Karte gegen ein LICHT oder FINSTERNIS Monster kämpft, vor der Schadensberechnung: Du kannst jenes Monster verbannen.
   es: |-
     Si controlas un monstruo "Constelación", excepto "Constelación Caduceo": puedes Invocar esta carta de Modo Especial desde tu mano. Durante tu Main Phase: puedes añadir a tu mano 1 Mágica/Trampa "Constelación" en tu Deck. Sólo puedes usar cada uno de los previos efectos de "Constelación Caduceo" una vez por turno. Un Monstruo Xyz "Constelación" que tenga esta carta como material gana este efecto.
     ● Si esta carta batalla con un monstruo de LUZ u OSCURIDAD, antes del cálculo de daño: puedes desterrar ese monstruo.
