--- a/data/cards/83039608.yaml
+++ b/data/cards/83039608.yaml
@@ -25,7 +25,7 @@ text:
   it: |-
     Se questa carta è nel tuo Cimitero: puoi scartare 1 mostro "Il Favoloso" e, se lo fai, Evoca Specialmente questa carta, ma bandiscila quando lascia il Terreno. Puoi utilizzare questo effetto di "Il Favoloso F. Abanc" una sola volta per turno.
   pt: |-
-    Se este card estiver no seu Cemitério: você pode descartar 1 monstro "Mitológico" e, se isso acontecer, Invoque este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Você só pode usar este efeito de "Abanc, o Mitológico" uma vez por turno.
+    Se este card estiver no seu Cemitério: você pode descartar 1 monstro "Mitológico(a)" e, se isso acontecer, Invoque este card por Invocação-Especial, mas bana-o quando ele deixar o campo. Você só pode usar este efeito de "Abanc, o Mitológico" uma vez por turno.
   ja: |-
     このカード名の効果は１ターンに１度しか使用できない。①：このカードが墓地に存在する場合に発動できる。手札から「魔轟神」モンスター１体を捨て、このカードを特殊召喚する。この効果で特殊召喚したこのカードは、フィールドから離れた場合に除外される。
   ko: |-
