--- a/data/cards/17427333.yaml
+++ b/data/cards/17427333.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Tribute 1 Machine monster, then target 1 card on the field for every 1000 original ATK of the Tributed monster; destroy those cards.
   de: |-
-    Biete 1 Maschine-Monster als Tribut an und wähle dann für jede 1000 Grund-ATK des als Tribut angebotenen Monsters 1 Karte auf dem Spielfeld; zerstöre die Karten.
+    Biete 1 Maschine-Monster als Tribut an und wähle dann für jede 1000 Grund-ATK des als Tribut angebotenen Monsters 1 Karte auf dem Spielfeld; zerstöre jene Karten.
   es: |-
     Sacrifica 1 monstruo Máquina, y después selecciona 1 carta en el Campo por cada 1000 ATK original del monstruo Sacrificado; destruye esas cartas.
   fr: |-
