--- a/data/cards/25407643.yaml
+++ b/data/cards/25407643.yaml
@@ -8,7 +8,7 @@ name:
   it: Il Santuario Segreto degli Incantatori
   pt: Santuário Secreto dos Conjuradores
   ja: <ruby>魔<rt>ま</rt></ruby><ruby>法<rt>ほう</rt></ruby><ruby>族<rt>ぞく</rt></ruby>の<ruby>聖<rt>せい</rt></ruby><ruby>域<rt>いき</rt></ruby>
-  ja_romaji: Mahōzoku no Sei'iki
+  ja_romaji: Mahōzoku no Seiiki
   ko: 마법족의 성역
   ko_rr:
   zh-TW:
