--- a/data/cards/26914168.yaml
+++ b/data/cards/26914168.yaml
@@ -17,7 +17,7 @@ text:
   en: |-
     Once per turn, during your Main Phase: You can return this face-up card to the hand. During the Damage Step, when your DARK monster battles an opponent's monster (Quick Effect): You can send this card from your hand to the GY; that opponent's monster loses ATK equal to its own ATK, until the end of this turn.
   de: |-
-    Einmal pro Spielzug, während deiner Main Phase: Du kannst diese offene Karte auf die Hand zurückgeben. Während des Damage Steps, wenn dein FINSTERNIS Monster gegen ein Monster eines Gegners kämpft (Schnelleffekt): Du kannst diese Karte von deiner Hand auf den Friedhof legen; das Monster des Gegners verliert bis zum Ende dieses Spielzugs ATK in Höhe seiner eigenen ATK.
+    Einmal pro Spielzug, während deiner Main Phase: Du kannst diese offene Karte auf die Hand zurückgeben. Während des Damage Steps, wenn dein FINSTERNIS Monster gegen ein Monster eines Gegners kämpft (Schnelleffekt): Du kannst diese Karte von deiner Hand auf den Friedhof legen; jenes Monster des Gegners verliert bis zum Ende dieses Spielzugs ATK in Höhe seiner eigenen ATK.
   es: |-
     Una vez por turno, durante tu Main Phase: puedes devolver a la mano esta carta boca arriba. Durante el Damage Step, cuando tu monstruo de OSCURIDAD batalla con un monstruo del adversario (Efecto Rápido): puedes mandar al Cementerio esta carta en tu mano; hasta el final de este turno, ese monstruo del adversario pierde ATK igual a su propio ATK.
   fr: |-
