--- a/data/cards/32056070.yaml
+++ b/data/cards/32056070.yaml
@@ -21,7 +21,7 @@ text:
     ● FIRE/DARK: Special Summon 1 "@Ignister Token" (Cyberse/DARK/Level 1/ATK 0/DEF 0).
     You can only use each effect of "You and A.I." once per turn for each Attribute.
   de: |-
-    Falls ein oder mehr Cyberse-Monster mit 2300 Grund-ATK als Spezialbeschwörung beschworen werden: Du kannst 1 dieser Effekte aktivieren, basierend auf den Eigenschaften der Monster auf dem Spielfeld;
+    Falls ein oder mehr Cyberse-Monster mit 2300 Grund-ATK als Spezialbeschwörung beschworen werden: Du kannst 1 dieser Effekte aktivieren, basierend auf den Eigenschaften jener Monster auf dem Spielfeld;
     ● ERDE/WASSER: Halbiere bis zum Ende dieses Spielzugs die ATK von 1 offenen Monster auf dem Spielfeld.
     ● WIND/LICHT: Annulliere bis zum Ende dieses Spielzugs die Effekte von 1 offenen Karte auf dem Spielfeld.
     ● FEUER/FINSTERNIS: Beschwöre 1 „@Ignister-Spielmarke“ (Cyberse/FINSTERNIS/Stufe 1/ATK 0/DEF 0) als Spezialbeschwörung.
@@ -48,7 +48,7 @@ text:
     Se um ou mais monstros Ciberso com 2300 de ATK original forem Invocados por Invocação-Especial: você pode ativar 1 desses efeitos, de acordo com o Atributo desse(s) monstro(s) no campo;
     ● TERRA/ÁGUA: Até o final deste turno, diminua pela metade o ATK de 1 monstro com a face para cima no campo.
     ● VENTO/LUZ: Até o final deste turno, negue os efeitos de 1 card com a face para cima no campo.
-    ● FOGO/TREVAS: Invoque por Invocação-Especial 1 "Ficha de @Ignister" (Ciberso/TREVAS/Nível 1/ATK 0/DEF 0).
+    ● FOGO/TREVAS: Invoque por Invocação-Especial 1 "Ficha @Ignister" (Ciberso/TREVAS/Nível 1/ATK 0/DEF 0).
     Você só pode usar cada efeito de "I.A. e Você" uma vez por turno para cada Atributo.
   ja: |-
     ①：元々の攻撃力が２３００のサイバース族モンスターが特殊召喚された場合、その属性によって以下の効果から１つを選択して発動できる。「ユウ－Ａｉ－」の以下の効果は１つの属性につき１ターンに１度しか選択できない。●地・水：フィールドの表側表示モンスター１体を選び、その攻撃力をターン終了時まで半分にする。●風・光：フィールドの表側表示のカード１枚を選び、その効果をターン終了時まで無効にする。●炎・闇：自分フィールドに「＠イグニスタートークン」（サイバース族・闇・星１・攻／守０）１体を特殊召喚する。
