--- a/data/cards/45796834.yaml
+++ b/data/cards/45796834.yaml
@@ -25,7 +25,7 @@ text:
     Diese Karte erhält die folgenden Effekte, basierend auf der Anzahl der Ausrüstungskarten, mit denen sie ausgerüstet ist.
     ● 1+: Diese Karte erhält für jede Ausrüstungskarte, mit der sie ausgerüstet ist, 1000 ATK.
     ● 2+: Dein Gegner kann während der Battle Phase keine Monstereffekte aktivieren.
-    ● 3+: Wenn eine Karte oder ein Effekt deines Gegners, die oder der diese Karte als Ziel wählt, aktiviert wird (Schnelleffekt): Du kannst 1 Ausrüstungskarte, die du kontrollierst, auf den Friedhof legen; annulliere den Effekt.
+    ● 3+: Wenn eine Karte oder ein Effekt deines Gegners, die oder der diese Karte als Ziel wählt, aktiviert wird (Schnelleffekt): Du kannst 1 Ausrüstungskarte, die du kontrollierst, auf den Friedhof legen; annulliere jenen Effekt.
     ● 4+: Dein Gegner kann während der Battle Phase weder Karten noch Effekte aktivieren.
     ● 5+: Kampfschaden, den diese Karte deinem Gegner zufügt, wird verdoppelt.
   es: |-
