--- a/data/cards/80088625.yaml
+++ b/data/cards/80088625.yaml
@@ -22,8 +22,8 @@ text:
   de: |-
     2 Normale Monster
     Diese Karte erhält diese Effekte, basierend auf der Anzahl der Monster, mit denen diese Karte kreuzgelinkt ist.
-    ● 1+: Wenn diese Karte einen Angriff gegen ein Monster eines Gegners deklariert: Du kannst diesen Effekt aktivieren; diese Karte kann in diesem Spielzug während jeder Battle Phase einen zweiten Angriff durchführen, zusätzlich, falls diese Karte in diesem Spielzug gegen ein Monster eines Gegners kämpft, kann das Monster des Gegners durch den Kampf nicht zerstört werden.
-    ● 2: Nach der Schadensberechnung, falls diese Karte gegen ein Monster eines Gegners gekämpft hat: Du kannst das Monster des Gegners verbannen.
+    ● 1+: Wenn diese Karte einen Angriff gegen ein Monster eines Gegners deklariert: Du kannst diesen Effekt aktivieren; diese Karte kann in diesem Spielzug während jeder Battle Phase einen zweiten Angriff durchführen, zusätzlich, falls diese Karte in diesem Spielzug gegen ein Monster eines Gegners kämpft, kann jenes Monster des Gegners durch jenen Kampf nicht zerstört werden.
+    ● 2: Nach der Schadensberechnung, falls diese Karte gegen ein Monster eines Gegners gekämpft hat: Du kannst jenes Monster des Gegners verbannen.
   es: |-
     2 Monstruos Normales
     Esta carta gana estos efectos basados en el número de monstruos co-enlazados a esta carta.
