--- a/data/cards/94317736.yaml
+++ b/data/cards/94317736.yaml
@@ -23,7 +23,7 @@ text:
   de: |-
     Einmal pro Spielzug, während der Main Phase 2: Der Zugspieler kann diesen Effekt aktivieren; er erhält 500 LP und wendet bis zum Ende dieses Spielzugs diese Effekte an.
     ● Die Normal- und Spezialbeschwörungen seiner Monster können nicht annulliert werden.
-    ● Falls er eine Zauber-/Fallenkarte oder einen Monstereffekt aktiviert, die oder der einen Effekt enthält, der ein Monster als Spezialbeschwörung beschwört, kann die Aktivierung nicht annulliert werden.
+    ● Falls er eine Zauber-/Fallenkarte oder einen Monstereffekt aktiviert, die oder der einen Effekt enthält, der ein Monster als Spezialbeschwörung beschwört, kann jene Aktivierung nicht annulliert werden.
     ● Sein Gegner kann gesetzte Zauber/Fallen, die er kontrolliert, nicht als Ziel für Karteneffekte wählen, zusätzlich können sie nicht durch Karteneffekte seines Gegners zerstört werden.
     Du kannst nur 1 „Geheime Quellen des Fernen Ostens“ pro Spielzug aktivieren.
   es: |-
