--- a/data/cards/yugipedia897908.yaml
+++ b/data/cards/yugipedia897908.yaml
@@ -7,8 +7,8 @@ name:
   fr:
   it:
   pt:
-  ja: <ruby>混沌変幻<rt>カオス・ファンクズム</rt></ruby>
-  ja_romaji: Kaosu Fankuzumu
+  ja: <ruby>混沌変幻<rt>カオス・ファンタズム</rt></ruby>
+  ja_romaji: Kaosu Fantazumu
   ko:
   ko_rr:
   zh-TW:
