--- a/data/cards/07925734.yaml
+++ b/data/cards/07925734.yaml
@@ -103,6 +103,11 @@ sets:
     - Normal Parallel Rare
     - Ultra Rare
     - Secret Rare
+  - set_number: AC02-KR048
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
