--- a/data/cards/11020863.yaml
+++ b/data/cards/11020863.yaml
@@ -41,6 +41,12 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  ko:
+  - set_number: AC02-KR001
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
