--- a/data/cards/89631139.yaml
+++ b/data/cards/89631139.yaml
@@ -1102,6 +1102,10 @@ sets:
     set_name: History Archive Collection
     rarities:
     - Ultra Rare
+  - set_number: AC02-KR000
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Prismatic Secret Rare
   zh-TW:
   - set_number: ''
     set_name: Chinese Weekly Shōnen Jump lottery prize cards
