--- a/data/cards/10186633.yaml
+++ b/data/cards/10186633.yaml
@@ -37,6 +37,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  ko:
+  - set_number: AC02-KR008
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
