--- a/data/cards/11808215.yaml
+++ b/data/cards/11808215.yaml
@@ -58,6 +58,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  ko:
+  - set_number: AC02-KR005
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
