--- a/data/cards/17955766.yaml
+++ b/data/cards/17955766.yaml
@@ -195,6 +195,10 @@ sets:
     set_name: 'Duelist Pack: Legend Duelist 6'
     rarities:
     - Common
+  - set_number: AC02-KR049
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Ultra Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
