--- a/data/cards/18940556.yaml
+++ b/data/cards/18940556.yaml
@@ -100,6 +100,11 @@ sets:
     set_name: "Structure Deck R: Tyranno's Rage"
     rarities:
     - Ultra Rare
+  - set_number: AC02-KR047
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
