--- a/data/cards/32453837.yaml
+++ b/data/cards/32453837.yaml
@@ -53,6 +53,12 @@ sets:
     rarities:
     - Super Rare
     - Collector's Rare
+  ko:
+  - set_number: AC02-KR029
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
