--- a/data/cards/62480168.yaml
+++ b/data/cards/62480168.yaml
@@ -39,6 +39,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  ko:
+  - set_number: AC02-KR039
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
