--- a/data/cards/70508653.yaml
+++ b/data/cards/70508653.yaml
@@ -37,6 +37,12 @@ sets:
     rarities:
     - Super Rare
     - Collector's Rare
+  ko:
+  - set_number: AC02-KR021
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
