--- a/data/cards/71620241.yaml
+++ b/data/cards/71620241.yaml
@@ -45,6 +45,12 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  ko:
+  - set_number: AC02-KR016
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
