--- a/data/cards/75780818.yaml
+++ b/data/cards/75780818.yaml
@@ -46,6 +46,12 @@ sets:
     rarities:
     - Ultra Rare
     - Collector's Rare
+  ko:
+  - set_number: AC02-KR018
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Ultra Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
