--- a/data/cards/79663524.yaml
+++ b/data/cards/79663524.yaml
@@ -41,6 +41,12 @@ sets:
     rarities:
     - Common
     - Normal Parallel Rare
+  ko:
+  - set_number: AC02-KR027
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Common
+    - Normal Parallel Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
