--- a/data/cards/83575471.yaml
+++ b/data/cards/83575471.yaml
@@ -45,6 +45,12 @@ sets:
     rarities:
     - Super Rare
     - Collector's Rare
+  ko:
+  - set_number: AC02-KR010
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
