--- a/data/cards/99991455.yaml
+++ b/data/cards/99991455.yaml
@@ -48,6 +48,12 @@ sets:
     rarities:
     - Super Rare
     - Collector's Rare
+  ko:
+  - set_number: AC02-KR037
+    set_name: Animation Chronicle 2022
+    rarities:
+    - Super Rare
+    - Secret Rare
 limit_regulation:
   tcg: Not yet released
   ocg: Unlimited
